Code Cleanup
*Banished ArrayLists
* added case-insensitivity to LmFunction#triggers
*made adjustments based on intellij code analyzer